--- a/index.html
+++ b/index.html
@@ -5,6 +5,41 @@
 <meta charset="utf-8">
 </head>
 <body>
+  <h1>Pacific Trails Resort>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="yurts.html">Yurts</a>
+    <a href="activities.html">Activities</a>
+    <a href="reservations.html">Reservations</a>
+  </nav>
+
+  <main>
+    <h2>Enjoy Nature in luxury</h2>
+    <p>Pacific Trails Resort offers a special lodging experience on the California North Coast
+      with Panoramic views of the Pacific Ocean. Your stay at Pacific Trails Resort includes a
+      sumptuosly appointed private yurt and a cooked-to-order breakfast each morning.
+    </p>
+    <ul>
+      <li>Unwind in the heated outdoor pool and whirlpool</li>
+      <li>Explore the coast on your own or join our guided tour</li>
+      <li>Relax in our lodge while enjoying complimentary appetizers and beverages</li>
+      <li>Savor nightly fine dining with an ocean view</li>
+    </ul>
+
+    <div>
+      Pacific Trails
+      <br>12010 Pacific Trails Road</br>
+      <br>Zephyr, CA 95555</br>
+      <br>888-555-5555</br>
+    </main>
+    
+    <footer>
+      <p>
+        <small><i>Copyright &copy; 2018 Pacific Trails Resort</i></small>
+        <a href="mailto:addalynn@bradbury.com">addalynn@bradbury.com</a>
+      </p>
+    </footer>
 
 </body>
 </html>
